--- a/docker-variables.conf
+++ b/docker-variables.conf
@@ -6,4 +6,5 @@ DOCKER_SECRETS_DIR="/var/lib/docker/secrets"
 #-------------------------------------------------------------------------------
 # File variables.
 #-------------------------------------------------------------------------------
+ENV_FILE="$(dirname $PWD)/.env"
 COMPOSE_FILE='compose.yml'
